Fixed floating header break on scrolling; Fixed hierarchy labels in tree mode not replacing those in drilldown

--- a/src/aggregatedTable/aggregatedTable.css
+++ b/src/aggregatedTable/aggregatedTable.css
@@ -114,7 +114,11 @@
   display:none;
   border:none;
 }
-/*.aggregatedTableContainer{position:relative}*/
+.aggregatedTableContainer{
+  position: relative;
+  width:100%;
+  overflow-x: auto;
+}
 
 /*Hierarchycal styles*/
 .reportal-hierarchy-table tr.level0 {
